# hauer_on_repeat

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  database.db  museum_label.md  startupH0R.sh  twelve_tone_music.md
Uploader/: README  Test.java  complete.sh
Uploader/uploadToServer/: SSH.java  erg.txt  uploadToServer.sh
database/: database.db  setup.sql
database/DBWriter/: CMakeLists.txt
database/DBWriter-BAK/: CMakeCache.txt  CMakeLists.txt
database/DBWriter-BAK/src/: DBConn.java
database/DBWriter/src/: DBConn.java  DBWriter.java
documentation/: main.tex  readme.txt
documentation/hardware/: readme.txt
html/: index.html
include/: GPIOClass.h  chords.h  files.h  monophonie.h  test_torus.h  torus.h
project_proposal/: SYP_Projektantrag.tex
src/: GPIOClass.cpp  chords.cpp  files.cpp  main.cpp  monophonie.cpp  test_torus.cpp  torus.cpp
test/: CMakeLists.txt  monophonie_test.cpp  runTests  torus_test.cpp
web/: example.xml  nr0.html  nr01.html  nr02.html  nr1.html  nr2.html  nr3.html  nr4.html  nr5.html  script.js  style.css
